Löst problem enligt vscode och uppdaterat springboot version